syntax = "proto3";
import "google/protobuf/timestamp.proto";

message TransactionData {
    int32 value = 1;
    bool isCredit = 2;
    string description = 3;
    google.protobuf.Timestamp createDate = 4;
}
